# ai_webapp

./: .gitignore  ENHANCEMENT_PLAN.md  FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  QUICK_TEST_REFERENCE.md  README.md  RUN_LOCALLY.md  TESTING_GUIDE.md  docker-compose.yml  start-dev.sh  test-all.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: ensemble.py  models.py  optimization.py  prediction.py  router.py  routes.py  segmentation.py
backend/app/ml/: base.py  dataset.py  ensemble.py  genetic_algorithm.py  image_processing.py  inference.py  loader.py  model.py  registry.py  unet.py
backend/app/ml/checkpoints/: base.pt
backend/app/models/: dummy_model.py  schemas.py
backend/app/scripts/: save_dummy_checkpoints.py
backend/app/services/: prediction_service.py
backend/tests/: conftest.py  test_health.py  test_models.py  test_prediction.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/test/: App.test.tsx  setup.ts
