[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.2"
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
torch = {version = "2.2.2", source = "pytorch-cpu"}
torchvision = "^0.17.2"
numpy = "^1.26"
pydantic = "^2.0.0"
pillow = "^10.0.0"
opencv-python-headless = "^4.8.0"
matplotlib = "^3.8.0"
scikit-image = "^0.22.0"
deap = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
